fix colors gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,8 +285,9 @@ h2 {
 }
 
 .project-desc {
-    font-size: 20px;
+    font-size: 18px;
     color: black;
+    text-align: justify;
 }
 
 .sub-title {
@@ -296,13 +297,14 @@ h2 {
 }
 
 .color-row {
-    gap: 20px;
+    gap: 12px;
 }
 
 .color-item {
     display: flex;
     flex-direction: column;
     align-items: start;
+    justify-content: space-between;
 }
 
 .color-box {
@@ -312,6 +314,8 @@ h2 {
 }
 
 .color-label {
+    width: 100%;          /* 🔥 same width for all labels */
+    text-align: center;
     margin-top: 6px;
     background: white;
     padding: 3px;
